--- a/php/users/ca@gmail.com.html
+++ b/php/users/ca@gmail.com.html
@@ -1,12 +1,11 @@
-<?php
 
-    $model = "<!DOCTYPE html>
+                    <!DOCTYPE html>
     <html lang='en'>
     <head>
         <meta charset='UTF-8'>
-        <title>$tittle</title>
+        <title></title>
         <!-- CSS -->
-        <link rel='stylesheet' href='css/styles.css'>
+        <link rel='stylesheet' href='styles.css'>
         <link rel='icon' type='imagem/png' href='./img/iconCine.png' />
     </head>
     <body>
@@ -91,6 +90,5 @@
     
         <!--script js-->
         <script src='script.js'></script>
-    </body>";
-
-?>
+    </body>
+                
