Modification of the create file

--- a/php/users/admin@gmail.com.html
+++ b/php/users/admin@gmail.com.html
@@ -1,11 +1,12 @@
 
-                    <!DOCTYPE html>
+                    
+    <!DOCTYPE html>
     <html lang='en'>
     <head>
         <meta charset='UTF-8'>
-        <title></title>
+        <title> StartCine - admin@gmail.com</title>
         <!-- CSS -->
-        <link rel='stylesheet' href='styles.css'>
+        <link rel='stylesheet' href='css/admin@gmail.com.css'>
         <link rel='icon' type='imagem/png' href='./img/iconCine.png' />
     </head>
     <body>
