modification of index.html

--- a/index.html
+++ b/index.html
@@ -21,34 +21,34 @@
         <div class="divSpace"></div>
         <!--Hyperlink for user-->
         <a href="php/login.php">
-            <img class="sideBarIcon" src="../img/iconUser.png">
+            <img class="sideBarIcon" src="./img/iconUser.png">
         </a>
         <div class="divSpace"></div>   
     </div><!--Margin top--><div class="Space"></div><!--Carrosel--><div id="carrosel">
         <div id="imagens">
             <!--item 1-->
             <div class="item">
-                <img class="carrosselImag" src="./img/cartazBatman.jpg">
+                <img class="carrosselImag" src="./img/home/cartazBatman.jpg">
             </div>
             <!--item 2-->
             <div class="item">
-                <img class="carrosselImag" src="./img/cartazCaptainAmerican.jpg">
+                <img class="carrosselImag" src="./img/home/cartazCaptainAmerican.jpg">
             </div>
             <!--item 3-->
             <div class="item">
-                <img class="carrosselImag" src="./img/cartazColdSouls.jpg">
+                <img class="carrosselImag" src="./img/home/cartazColdSouls.jpg">
             </div>
             <!--item 4-->
             <div class="item">
-                <img class="carrosselImag" src="./img/cartazDjango.jpg">
+                <img class="carrosselImag" src="./img/home/cartazDjango.jpg">
             </div>
             <!--item 5-->
             <div class="item">
-                <img class="carrosselImag" src="./img/cartazFantasticBeasts.jpg">
+                <img class="carrosselImag" src="./img/home/cartazFantasticBeasts.jpg">
             </div>
             <!--item 6-->
             <div class="item">
-                <img class="carrosselImag" src="./img/cartazVforVendetta.jpg">
+                <img class="carrosselImag" src="./img/home/cartazVforVendetta.jpg">
             </div>
         </div>
     </div>
@@ -56,19 +56,19 @@
     <!--wrapper-->
     <div class="wrapper">
         <div class="images">
-            <img src="./img/cartazIronMan.jpg" alt=""><p>ironmain</p>
+            <img src="./img/home/cartazIronMan.jpg" alt=""><p>ironmain</p>
         </div>
         <div class="images">
-            <img src="./img/cartazJusticeLeague.jpg" alt="">
+            <img src="./img/home/cartazJusticeLeague.jpg" alt="">
         </div>
         <div class="images">
-            <img src="./img/cartazMatrix.jpg" alt="">
+            <img src="./img/home/cartazMatrix.jpg" alt="">
         </div>
         <div class="images">
-            <img src="./img/cartazRambo.jpg" alt="">
+            <img src="./img/home/cartazRambo.jpg" alt="">
         </div>
         <div class="images">
-            <img src="./img/cartazStanLee.webp" alt="">
+            <img src="./img/home/cartazStanLee.webp" alt="">
         </div>
     </div>
     
@@ -77,7 +77,7 @@
         <i class="far fa-times-circle" id='close'></i>
         
         <div class="gallery-inner">
-            <img src="./img/doctor.jpg" alt="">
+            <img src="./img/home/doctor.jpg" alt="">
         </div>
         <div class="control-prev">
             <i class="fas fa-arrow-circle-left"></i>
