modification of fast&furious' files

--- a/php/SearchSites/fast&furious.html
+++ b/php/SearchSites/fast&furious.html
@@ -28,37 +28,37 @@
         
         <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-29173/" class="images">      
-                    <img src="img/fastFurious/movie1.jpg" alt="">
+                    <img src="../../img/fastFurious/movie1.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-45319/" class="images">
-                <img src="img/fastFurious/movie2.jpg.opdownload" alt="">
+                <img src="../../img/fastFurious/movie2.jpg.opdownload" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-131334/" class="images">
-                <img src="img/fastFurious/movie4.jpg" alt="">
+                <img src="../../img/fastFurious/movie4.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-178061/" class="images">
-                <img src="img//fastFurious/movie5.png" alt="">
+                <img src="../../img//fastFurious/movie5.png" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-189651/" class="images">
-                <img src="img/fastFurious/movie6.jpg_large" alt="">
+                <img src="../../img/fastFurious/movie6.jpg_large" alt="">
             </a>
         </div>
 
         <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-61256/" class="images">
-                <img src="img//fastFurious/movie3.jpg" alt="">
+                <img src="../../img//fastFurious/movie3.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-198750/" class="images">
-                <img src="img/fastFurious/movie7.jpg.opdownload" alt="">
+                <img src="../../img/fastFurious/movie7.jpg.opdownload" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-221541/" class="images">
-                <img src="img/fastFurious/movie8.jpg" alt="">
+                <img src="../../img/fastFurious/movie8.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-219944/" class="images">      
-                <img src="img/fastFurious/movieHobbs.jpg" alt="">
+                <img src="../../img/fastFurious/movieHobbs.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-221542/" class="images">      
-                <img src="img/fastFurious/movie9.jpg" alt="">
+                <img src="../../img/fastFurious/movie9.jpg" alt="">
             </a>
         </div>
         
