--- a/php/SearchSites/starwars.html
+++ b/php/SearchSites/starwars.html
@@ -28,55 +28,55 @@
         
         <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-20754/" class="images">      
-                    <img src="img/starWars/movie1.webp" alt="">
+                    <img src="../../img/starWars/movie1.webp" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-29014/" class="images">
-                <img src="img/starWars/movie2.webp" alt="">
+                <img src="../../img/starWars/movie2.webp" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-40623/" class="images">
-                <img src="img/starWars/movie3.jpg" alt="">
+                <img src="../../img/starWars/movie3.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-218386/" class="images">
-                <img src="img/starWars/moviehanSolo.jpg" alt="">
+                <img src="../../img/starWars/moviehanSolo.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/series/serie-25501/" class="images">
-                <img src="img/starWars/movieKenobi.jpg" alt="">
+                <img src="../../img/starWars/movieKenobi.jpg" alt="">
             </a>
         </div>
 
         <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-218395/" class="images">
-                <img src="img/starWars/movieRogueOne.jpg" alt="">
+                <img src="../../img/starWars/movieRogueOne.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-25801/" class="images">
-                <img src="img/starWars/movie4.webp" alt="">
+                <img src="../../img/starWars/movie4.webp" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-25802/" class="images">
-                <img src="img/starWars/movie5.webp" alt="">
+                <img src="../../img/starWars/movie5.webp" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-25803/" class="images">      
-                <img src="img/starWars/movie6.jpg" alt="">
+                <img src="../../img/starWars/movie6.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/series/serie-22963/" class="images">      
-                <img src="img/starWars/movieMandalorian.webp" alt="">
+                <img src="../../img/starWars/movieMandalorian.webp" alt="">
             </a>
         </div>
 
         <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-215097/" class="images">
-                <img src="img/starWars/movie7.jpg" alt="">
+                <img src="../../img/starWars/movie7.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-215099/" class="images">
-                <img src="img/starWars/movie8.jfif" alt="">
+                <img src="../../img/starWars/movie8.jfif" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-215094/" class="images">
-                <img src="img/starWars/movie9.webp" alt="">
+                <img src="../../img/starWars/movie9.webp" alt="">
             </a>
             <a href="https://www.adorocinema.com/series/serie-12208/" class="images">
-                <img src="img/starWars/movieRebels.jpg" alt="">
+                <img src="../../img/starWars/movieRebels.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/pesquisar/movie/?q=star%20wars" class="images">
-                <img src="img/starWars/starwars.webp" alt="">
+                <img src="../../img/starWars/starwars.webp" alt="">
             </a>
         </div>
     </body>
