move and modification xmen's files

--- a/php/SearchSites/xmen.html
+++ b/php/SearchSites/xmen.html
@@ -28,46 +28,46 @@
         
         <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-140894/" class="images">      
-                    <img src="img/xMan/fistClass.jpg" alt="">
+                    <img src="../../img/xmen/fistClass.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-111544/" class="images">
-                <img src="img/xMan/wolvwrine.jpg" alt="">
+                <img src="../../img/xmen/wolvwrine.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-25518/" class="images">
-                <img src="img/xMan/xMen.jpg" alt="">
+                <img src="../../img/xmen/xMen.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-29240/" class="images">
-                <img src="img/xMan/xMen2.jpg" alt="">
+                <img src="../../img/xmen/xMen2.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-52719/" class="images">
-                <img src="img/xMan/xMen3.jpg" alt="">
+                <img src="../../img/xmen/xMen3.jpg" alt="">
             </a>
         </div>
 
         <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-146326/" class="images">
-                <img src="img/xMan/immortal.jpg" alt="">
+                <img src="../../img/xmen/immortal.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-195128/" class="images">
-                <img src="img/xMan/daysOfFuturePast.jpg" alt="">
+                <img src="../../img/xmen/daysOfFuturePast.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-225717/" class="images">
-                <img src="img/xMan/apocalypse.webp" alt="">
+                <img src="../../img/xmen/apocalypse.webp" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-242867/" class="images">      
-                <img src="img/xMan/D6Gxg_fU0AA9Gdt.jpg" alt="">
+                <img src="../../img/xmen/D6Gxg_fU0AA9Gdt.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-146349/" class="images">      
-                <img src="img/xMan/deadpool.jpg" alt="">
+                <img src="../../img/xmen/deadpool.jpg" alt="">
             </a>
         </div>
 
         <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-245006/" class="images">
-                <img src="img/xMan/deadpool-2.webp" alt="">
+                <img src="../../img/xmen/deadpool-2.webp" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-225116/" class="images">
-                <img src="img/xMan/logan.jpg" alt="">
+                <img src="../../img/xmen/logan.jpg" alt="">
             </a>
         </div>
     </body>
