more modification in model.php

--- a/php/users/admin@gmail.com/change.html
+++ b/php/users/admin@gmail.com/change.html
@@ -7,11 +7,11 @@
         <title>Document</title>
     </head>
     <body>
-        <form method='post' action='../c@c/styles.php'>
-            change you background color <input type='color' name='backgroundColor'>
-            change you sideBar color <input type='color' name='sideBarColor'>
-            <input type='submit' value='Change'>
+        <form method='post' action='styles.php'>
+        change you background color <input type='text' name='backColor'>
+        change you sideBar color <input type='text' name='sideColor'>
+        <input type='submit' value='Change'>
         </form>
     </body>
 </html>
-
+  
