--- a/php/users/admin@gmail.com/home.html
+++ b/php/users/admin@gmail.com/home.html
@@ -1,10 +1,10 @@
 
                     
-<!DOCTYPE html>
-<html lang='en'>
-    <head>
+    <!DOCTYPE html>
+    <html lang='en'>
+        <head>
         <meta charset='UTF-8'>
-        <title> StartCine - c@c </title>
+        <title> StartCine - admin@gmail.com </title>
         <!-- CSS -->
         <link rel='stylesheet' href='styles.php'>
         <link rel='icon' type='imagem/png' href='../../../img/iconCine.png' />
@@ -14,7 +14,7 @@
          <!--sidebar-->
         <div class='sideBar'>
         <!--Hyperlink for search-->
-        <a href='../../php/search.html'>
+        <a href='../../search.html'>
             <img class='sideBarIcon' src='../../../img/iconSearch.png'>
         </a>
         <div class='divSpace'></div>
@@ -24,7 +24,7 @@
         </a>
         <div class='divSpace'></div>
         <!--Hyperlink for user-->
-        <a href='../../php/login.php'>
+        <a href='../../login.php'>
             <img class='sideBarIcon' src='../../../img/iconUser.png'>
         </a>
         <div class='divSpace'></div>   
