refining the code

--- a/index.html
+++ b/index.html
@@ -9,21 +9,16 @@
 </head>
 <body>
 
-     <!--sidebar-->
+    <!--sidebar-->
     <div id="sideBar">
         <!--Hyperlink for search-->
         <a href="php/search.html">
             <img class="sideBarIcon" src="./img/iconSearch.png">
         </a>
-        <div class="divSpace"></div>
-        <!--Hyperlink for strings-->
-        <img class="sideBarIcon" src="./img/inconConfig.png">
-        <div class="divSpace"></div>
         <!--Hyperlink for user-->
         <a href="php/login.php">
             <img class="sideBarIcon" src="./img/iconUser.png">
-        </a>
-        <div class="divSpace"></div>   
+        </a> 
     </div>
 
     <!--main-->
@@ -31,7 +26,7 @@
         <div id="imagesMain">
             <!--itens 1-->
             <div class="itens">
-                <img class="mainImag" src="./img/home/cartazDoctorStrange.jpg">
+                <img class="mainImag" src="./img/home/cartazFast.jpg">
             </div>
             <!--itens 2-->
             <div class="itens">
@@ -45,47 +40,49 @@
     </div>
     
     <!--footer-->
-    <div id="footer">
-        <div id="images">
-            <!--itens 1-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazBatman.jpg">
-            </div>
-            <!--itens 2-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazCaptainAmerican.jpg">
-            </div>
-            <!--itens 3-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazColdSouls.jpg">
-            </div>
-            <!--itens 4-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazDjango.jpg">
-            </div>
-            <!--itens 5-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazFantasticBeasts.jpg">
-            </div>
-            <!--itens 6-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazVforVendetta.jpg">
-            </div>
-            <!--itens 7-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazIronMan.jpg">
-            </div>
-            <!--itens 8-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazJusticeLeague.jpg">
-            </div>
-            <!--itens 9-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazMatrix.jpg">
-            </div>
-            <!--itens 10-->
-            <div class="itens">
-                <img class="footerImag" src="./img/home/cartazRambo.jpg">
+    <div id="backFooter">
+        <div id="footer">
+            <div id="images">
+                <!--itens 1-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazBatman.jpg">
+                </div>
+                <!--itens 2-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazCaptainAmerican.jpg">
+                </div>
+                <!--itens 3-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazColdSouls.jpg">
+                </div>
+                <!--itens 4-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazDjango.jpg">
+                </div>
+                <!--itens 5-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazFantasticBeasts.jpg">
+                </div>
+                <!--itens 6-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazVforVendetta.jpg">
+                </div>
+                <!--itens 7-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazIronMan.jpg">
+                </div>
+                <!--itens 8-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazJusticeLeague.jpg">
+                </div>
+                <!--itens 9-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazMatrix.jpg">
+                </div>
+                <!--itens 10-->
+                <div class="itens">
+                    <img class="footerImag" src="./img/home/cartazRambo.jpg">
+                </div>
             </div>
         </div>
     </div>
