--- a/php/SearchSites/fast&furious.html
+++ b/php/SearchSites/fast&furious.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <title>StartCine - Fast&furious</title>
         <!-- CSS -->
-        <link rel="stylesheet" href="css/fast&furious.css">
+        <link rel="stylesheet" href="css/pageSaga.css">
         <link rel="icon" type="imagem/png" href="../../img/iconCine.png" />
     </head>
     <body>
-
+        <div id="backFast">
         <!--sidebar-->
-        <div class="sideBar">
+        <div id="sideBar">
             <div class="bigSpace"></div>
             <!--Hyperlink for search-->
             <a href="../search.html">
@@ -26,9 +26,9 @@
             </a>
         </div>
         
-        <div class="wrapper">
+        <div id="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-29173/" class="images">      
-                    <img src="../../img/fastFurious/movie1.jpg" alt="">
+                <img src="../../img/fastFurious/movie1.jpg" alt="">
             </a>
             <a href="https://www.adorocinema.com/filmes/filme-45319/" class="images">
                 <img src="../../img/fastFurious/movie2.jpg.opdownload" alt="">
@@ -42,9 +42,6 @@
             <a href="https://www.adorocinema.com/filmes/filme-189651/" class="images">
                 <img src="../../img/fastFurious/movie6.jpg_large" alt="">
             </a>
-        </div>
-
-        <div class="wrapper">
             <a href="https://www.adorocinema.com/filmes/filme-61256/" class="images">
                 <img src="../../img//fastFurious/movie3.jpg" alt="">
             </a>
@@ -61,6 +58,5 @@
                 <img src="../../img/fastFurious/movie9.jpg" alt="">
             </a>
         </div>
-        
     </body>
 </html>
