--- a/php/SearchSites/marvel.html
+++ b/php/SearchSites/marvel.html
@@ -2,146 +2,174 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>StartCine - Marvel</title>
+        <title>StartCine-Marvel</title>
         <!-- CSS -->
-        <link rel="stylesheet" href="css/marvel.css">
+        <link rel="stylesheet" href="css/pageSaga.css">
         <link rel="icon" type="imagem/png" href="../../img/iconCine.png" />
     </head>
     <body>
-
-        <!--sidebar-->
-        <div class="sideBar">
-            <div class="bigSpace"></div>
-            <!--Hyperlink for search-->
-            <a href="../search.html">
-                <img class="sideBarIcon" src="../../img/iconSearch.png">
-            </a>
-            <div class="divSpace"></div>
-            <!--Hyperlink for strings-->
-            <img class="sideBarIcon" src="../../img/inconConfig.png">
-            <div class="divSpace"></div>
-            <!--Hyperlink for user-->
-            <a href="../login.php">
-                <img class="sideBarIcon" src="../../img/iconUser.png">
-            </a>
+        <!--BACKGROUND IMAGE-->
+        <div id="backMarvel">
+            <!--MAIN--> 
+            <main>    
+                <!--ASIDE-->
+                <aside>
+                    <!--SEARCH-->
+                    <a href="../search.html">
+                        <img class="sideBarIcon" src="../../img/iconSearch.png">
+                    </a>
+                    <!--USER-->
+                    <a href="../login.php">
+                        <img class="sideBarIcon" src="../../img/iconUser.png">
+                    </a>
+                </aside>
+                <!--END ASIDE-->    
+                <!--HEADER--> 
+                <header>
+                    <p>ALL MOVIES ARE IN CHRONOLOGICAL ORDER</p>
+                    <p>&copy: Marvel Studios; &reg: Kadu</p>
+                </header>
+                <!--END HEADER--> 
+                <!--CONTENT--> 
+                <div id="content">
+                    <!--GALLARY OF MOVIES--> 
+                    <article>
+                        <!--MOVIE--> 
+                        <a href="https://www.adorocinema.com/filmes/filme-136557/" class="images">      
+                            <img src="../../img/marvel/cartazCaptainAmerican.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-141110/" class="images">
+                            <img src="../../img/marvel/captainMarvel.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-53751/" class="images">
+                            <img src="../../img/marvel/cartazIronMan.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-136190/" class="images">
+                            <img src="../../img/marvel/ironman2.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-114820/" class="images">
+                            <img src="../../img/marvel/hulk.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-129477/" class="images">
+                            <img src="../../img/marvel/thor.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-130440/" class="images">
+                            <img src="../../img/marvel/avangers.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-139589/" class="images">
+                            <img src="../../img/marvel/ironman3.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-193108/" class="images">      
+                            <img src="../../img/marvel/thor2.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-193113/" class="images">      
+                            <img src="../../img/marvel/captainamrerica2.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-196604/" class="images">
+                            <img src="../../img/marvel/guardiansGalaxy.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-226995/" class="images">
+                            <img src="../../img/marvel/gG.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-198488/" class="images">
+                            <img src="../../img/marvel/avangers2.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-130438/" class="images">
+                            <img src="../../img/marvel/antMan.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-215143/" class="images">
+                            <img src="../../img/marvel/civilWar.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-209778/" class="images">
+                            <img src="../../img/marvel/homecoming.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-130533/" class="images">
+                            <img src="../../img/marvel/doctorStrange.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-130336/" class="images">
+                            <img src="../../img/marvel/blackPanther.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-223252/" class="images">
+                            <img src="../../img/marvel/thor3.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-226391/" class="images">
+                            <img src="../../img/marvel/antman2.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-230783/" class="images">
+                            <img src="../../img/marvel/blackWidow.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-218265/" class="images">
+                            <img src="../../img/marvel/infinityWar.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-232669/" class="images">
+                            <img src="../../img/marvel/endGame.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/series/serie-24173/" class="images">
+                            <img src="../../img/marvel/wandaVision.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-270144/" class="images">
+                            <img src="../../img/marvel/shangChi.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-222291/" class="images">
+                            <img src="../../img/marvel/farFromHome.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/series/serie-24397/" class="images">
+                            <img src="../../img/marvel/falcon.jpeg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-136316/" class="images">
+                            <img src="../../img/marvel/etenals.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-256880/" class="images">
+                            <img src="../../img/marvel/noWayHome.jfif" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/series/serie-25546/" class="images">
+                            <img src="../../img/marvel/moonKnight.png" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/series/serie-24172/" class="images">
+                            <img src="../../img/marvel/loki.jpeg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                        <a href="https://www.adorocinema.com/filmes/filme-251390/" class="images">
+                            <img src="../../img/marvel/doctorStrange2.jpg" alt="">
+                        </a>
+                        <!--MOVIE-->
+                    </article>
+                    <!--END GALLARY OF MOVIES--> 
+                </div>
+                <!--END CONTENT-->
+            </main>
+            <!--END MAIN--> 
         </div>
-        
-        <div class="wrapper">
-            <a href="https://www.adorocinema.com/filmes/filme-136557/" class="images">      
-                    <img src="../../img/marvel/cartazCaptainAmerican.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-141110/" class="images">
-                <img src="../../img/marvel/captainMarvel.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-53751/" class="images">
-                <img src="../../img/marvel/cartazIronMan.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-136190/" class="images">
-                <img src="../../img/marvel/ironman2.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-114820/" class="images">
-                <img src="../../img/marvel/hulk.jpg" alt="">
-            </a>
-        </div>
-
-        <div class="wrapper">
-            <a href="https://www.adorocinema.com/filmes/filme-129477/" class="images">
-                <img src="../../img/marvel/thor.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-130440/" class="images">
-                <img src="../../img/marvel/avangers.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-139589/" class="images">
-                <img src="../../img/marvel/ironman3.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-193108/" class="images">      
-                <img src="../../img/marvel/thor2.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-193113/" class="images">      
-                <img src="../../img/marvel/captainamrerica2.jpg" alt="">
-            </a>
-        </div>
-
-        <div class="wrapper">
-            <a href="https://www.adorocinema.com/filmes/filme-196604/" class="images">
-                <img src="../../img/marvel/guardiansGalaxy.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-226995/" class="images">
-                <img src="../../img/marvel/gG.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-198488/" class="images">
-                <img src="../../img/marvel/avangers2.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-130438/" class="images">
-                <img src="../../img/marvel/antMan.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-215143/" class="images">
-                <img src="../../img/marvel/civilWar.jpg" alt="">
-            </a>
-        </div>
-
-        <div class="wrapper">
-            <a href="https://www.adorocinema.com/filmes/filme-209778/" class="images">
-                <img src="../../img/marvel/homecoming.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-130533/" class="images">
-                <img src="../../img/marvel/doctorStrange.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-130336/" class="images">
-                <img src="../../img/marvel/blackPanther.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-223252/" class="images">
-                <img src="../../img/marvel/thor3.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-226391/" class="images">
-                <img src="../../img/marvel/antman2.jpg" alt="">
-            </a>
-        </div>
-
-        <div class="wrapper">
-            <a href="https://www.adorocinema.com/filmes/filme-230783/" class="images">
-                <img src="../../img/marvel/blackWidow.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-218265/" class="images">
-                <img src="../../img/marvel/infinityWar.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-232669/" class="images">
-                <img src="../../img/marvel/endGame.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/series/serie-24173/" class="images">
-                <img src="../../img/marvel/wandaVision.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-270144/" class="images">
-                <img src="../../img/marvel/shangChi.jpg" alt="">
-            </a>
-        </div>
-
-        <div class="wrapper">
-            <a href="https://www.adorocinema.com/filmes/filme-222291/" class="images">
-                <img src="../../img/marvel/farFromHome.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/series/serie-24397/" class="images">
-                <img src="../../img/marvel/falcon.jpeg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-136316/" class="images">
-                <img src="../../img/marvel/etenals.jpg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-256880/" class="images">
-                <img src="../../img/marvel/noWayHome.jfif" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/series/serie-25546/" class="images">
-                <img src="../../img/marvel/moonKnight.png" alt="">
-            </a>
-        </div>
-
-        <div class="wrapper">
-            <a href="https://www.adorocinema.com/series/serie-24172/" class="images">
-                <img src="../../img/marvel/loki.jpeg" alt="">
-            </a>
-            <a href="https://www.adorocinema.com/filmes/filme-251390/" class="images">
-                <img src="../../img/marvel/doctorStrange2.jpg" alt="">
-            </a>
-            
-        </div>
+        <!--END BACKGROUND IMAGE--> 
     </body>
 </html>
